syntax = "proto3";
package verana.td.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "verana/td/v1/params.proto";

option go_package = "github.com/verana-labs/verana-blockchain/x/td/types";


// TrustDeposit represents an account's trust deposit
message TrustDeposit {
  string account = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 share = 2;
  uint64 amount = 3;
  uint64 claimable = 4;
  // NEW v2 fields: Slashing related
  uint64 slashed_deposit = 5;
  uint64 repaid_deposit = 6;
  google.protobuf.Timestamp last_slashed = 7 [(gogoproto.stdtime) = true];
  google.protobuf.Timestamp last_repaid = 8 [(gogoproto.stdtime) = true];
  uint64 slash_count = 9;
  string last_repaid_by = 10 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message SlashTrustDepositProposal {
  string title = 1 [(gogoproto.moretags) = "yaml:\"title\""];
  string description = 2 [(gogoproto.moretags) = "yaml:\"description\""];
  string account = 3 [(gogoproto.moretags) = "yaml:\"account\""];
  string amount = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"amount\""
  ];
}